inserida a lista de jogadores e criado  o estilo.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Futebol Mundial</title>
 </head>
 <body>
@@ -11,6 +12,23 @@
         <h1>Futebol Mundial</h1>
         <p>Este é o site que o Murilo está desenvolvendo em HTML5, CSS E JS.</p>
         <img src="imagens/penalti.png" alt="imagem de um penalti">
+        <h1>Grandes Jogadores De Futebol</h1>
+        <ul>
+            <li>Pelé</li>
+            <li>Ronaldinho Gaúcho</li>            
+            <li>Roberto Carlos</li>
+            <li>Cristiano Ronaldo</li>
+            <li>Messi</li>
+            <li>Lewandovski</li>
+            <li>Neymar</li>
+            <li>Neuer</li>
+            <li>Ibrahimovic</li>
+            <li>Thomás Müller</li>
+            <li>James</li>
+            <li>Mbappé</li>
+            <li>TIA PRI AMAMOS VOCÊ</li>
+
+        </ul>
     </main>
 </body>
 </html>
