inseridos emojis de bola e de jogado no index .htmlr

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Futebol Mundial</title>
+    <title> &#9917; Futebol Mundial</title>
 </head>
 <body>
     <main>
-        <h1>Futebol Mundial</h1>
+        <h1> &#9917; Futebol Mundial &#9917; </h1>
         <p>Este é o site que o Murilo está desenvolvendo em HTML5, CSS E JS.</p>
         <img src="imagens/penalti.png" alt="imagem de um penalti">
-        <h1>Grandes Jogadores De Futebol</h1>
+        <h1><span>&#127939;&#127997;</span>Grandes Jogadores De Futebol<span>&#127939;&#127996;</span></h1>
         <ul>
             <li>Pelé</li>
             <li>Ronaldinho Gaúcho</li>            
