--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilo.css">
     <title> &#9917; Futebol Mundial</title>
 </head>
 <body>
@@ -15,6 +15,7 @@
         <h1><span>&#127939;&#127997;</span>Grandes Jogadores De Futebol<span>&#127939;&#127996;</span></h1>
         <ul>
             <li>Pelé</li>
+            <P>Edson Arantes Do Nacimento, mais conhecido como PELÉ, é um ex jogador de Futebol BRASLEIRO que atuava como atacante, O PELÉ é conciderado o rei do futebol, Pelé fez 757 gols em toda a sua carreira ele jogou no Santos e no New York Cosmos Pelé se aposentou com 36 anos.</P>
             <li>Ronaldinho Gaúcho</li>            
             <li>Roberto Carlos</li>
             <li>Cristiano Ronaldo</li>
