inserido a descrição de Ronaldinho Gaúcho

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <img src="imagens/penalti.png" alt="imagem de um penalti">
         <h1><span>&#127939;&#127997;</span>Grandes Jogadores De Futebol<span>&#127939;&#127996;</span></h1>
         <ul>
-            <li>Pelé</li>
+            <li><b>Pelé</b></li>
             <P>Edson Arantes Do Nacimento, mais conhecido como PELÉ, é um ex jogador de Futebol BRASLEIRO que atuava como atacante, O PELÉ é conciderado o rei do futebol, Pelé fez 757 gols em toda a sua carreira ele jogou no Santos e no New York Cosmos Pelé se aposentou com 36 anos.</P>
-            <li>Ronaldinho Gaúcho</li>            
+            <li><b>Ronaldinho Gaúcho</b></li> 
+            <P>Ronaldinho Gaúcho é um jogador BRASLEIRO,  Ronaldinho sempre driblou bem a sua melhor fase foi no barça, Ronaldinho marcou 276 gols em toda sua carreira, Ronaldinho atuou no Atletico Mineiro ,GrÊmio ,Flamengo e entre outros times.</P>      
             <li>Roberto Carlos</li>
             <li>Cristiano Ronaldo</li>
             <li>Messi</li>
