descrição cr7 e Messi

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <li><b>Roberto Carlos</b></li>
             <p>Roberto Carlos, nascido em 10 de abril 1973, é um ex futibolista que atuava como lateral-esquerdo Roberto Carlos foi um dos melhores laterais-esquerdo da história.</p>
             <li>Cristiano Ronaldo</li>
+            <p>Cristiano Ronaldo Santos da Silva nascido em 5/2/85 em Portugal em ilha da madeira Cristiano tem 5 bolas de ouro  e Cr7 bateu a marca de pulo mais alto do futebol atinjindo 2,71metros de altura.</p>
             <li>Messi</li>
+            <p>Messi é apilidado de et pela sua habilidade Messi tem 6 bolas de ouro ele iniciou a carreira com 11 anos de idade Lionel jogou apenas no barça e no psg.</p>
             <li>Lewandovski</li>
             <li>Neymar</li>
             <li>Neuer</li>
