--- a/index.html
+++ b/index.html
@@ -20,18 +20,17 @@
             <P>Ronaldinho Gaúcho é um jogador BRASLEIRO,  Ronaldinho sempre driblou bem a sua melhor fase foi no barça, Ronaldinho marcou 276 gols em toda sua carreira, Ronaldinho atuou no Atletico Mineiro ,GrÊmio ,Flamengo e entre outros times.</P>      
             <li><b>Roberto Carlos</b></li>
             <p>Roberto Carlos, nascido em 10 de abril 1973, é um ex futibolista que atuava como lateral-esquerdo Roberto Carlos foi um dos melhores laterais-esquerdo da história.</p>
-            <li>Cristiano Ronaldo</li>
+            <li><b>Cristiano Ronaldo</b></li>
             <p>Cristiano Ronaldo Santos da Silva nascido em 5/2/85 em Portugal em ilha da madeira Cristiano tem 5 bolas de ouro  e Cr7 bateu a marca de pulo mais alto do futebol atinjindo 2,71metros de altura.</p>
-            <li>Messi</li>
+            <li><b>Messi</b></li>
             <p>Messi é apilidado de et pela sua habilidade Messi tem 6 bolas de ouro ele iniciou a carreira com 11 anos de idade Lionel jogou apenas no barça e no psg.</p>
-            <li>Lewandovski</li>
-            <li>Neymar</li>
-            <li>Neuer</li>
-            <li>Ibrahimovic</li>
-            <li>Thomás Müller</li>
-            <li>James</li>
-            <li>Mbappé</li>
-            <li>TIA PRI AMAMOS VOCÊ</li>
+            <li><b>Lewandovski</b></li>
+            <li><b>Neymar</b></li>
+            <li><b>Neuer</b></li>
+            <li><b>Ibrahimovic</b></li>
+            <li><b>Thomás Müller</b></li> 
+            <li><b>Mbappé</b></li>
+            <li><b>PAI MÃE AMO MUITO VOCÊS.</b></li>
 
         </ul>
     </main>
