--- a/premiopuskas.html
+++ b/premiopuskas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,41 @@
     <link rel="stylesheet" href="estilo.css">
     <title>premio puskas </title>
 </head>
+
 <body>
     <main>
-        <h1>Premio Puskas.</h1>  
-        <p></p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/-NpR6jO2pi0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      
+        <h1>GOLAÇOS DO CR7</h1>
+        <div>
+            <a href="index.html"><button id="btn">clique-me para voltar</button></a>
 
+        </div>
 
-
+        
+                <p></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/-NpR6jO2pi0"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <p></p>
+                <p>No ano de 2009 foi criado o prêmio puskas Cristiano Ronaldo foi o autor do gol mais bonito do ano de
+                    2009 já em 2018 Cr7 deu uma bicicleta contra a JUVENTUS, este golaço não ganhou o puskas quem ganhou
+                    foi Mohamed Salah</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Cl6e47xqEb8"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <p></p>
+                <p>na copa de 2018 cr7 igualou o placar 3x3 com gol de falta contra a Espanha</p>
+                <p></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bUPsvcZsiC4"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <p></p>
+                <p>golaço no ângulo de falta contra o Portsmouth </p>
+                <p></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/2JINcWjNfXE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </main>
-
-
-
-
-
-    
 </body>
+
 </html>
